# AudioShare

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.1.10.md  RELEASE_NOTES_v0.1.11.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.1.9.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  publish-apt-repository.yml  release.yml
X/: AudioShare_Codex_Packaging_Release_Pack.md  SynchroSonic_v0.1.10_prompt_pack.md
crates/synchrosonic-app/: Cargo.toml
crates/synchrosonic-app/src/: browser_join.rs  diagnostics.rs  logging.rs  main.rs  metadata.rs  persistence.rs  ui.rs
crates/synchrosonic-audio/: Cargo.toml
crates/synchrosonic-audio/examples/: capture_probe.rs
crates/synchrosonic-audio/src/: lib.rs  linux.rs  playback.rs
crates/synchrosonic-core/: Cargo.toml
crates/synchrosonic-core/src/: audio.rs  config.rs  diagnostics.rs  error.rs  lib.rs  models.rs  receiver.rs  services.rs  state.rs  streaming.rs
crates/synchrosonic-discovery/: Cargo.toml
crates/synchrosonic-discovery/examples/: discovery_probe.rs
crates/synchrosonic-discovery/src/: lib.rs
crates/synchrosonic-receiver/: Cargo.toml
crates/synchrosonic-receiver/src/: buffer.rs  lib.rs  playback.rs  service.rs
crates/synchrosonic-transport/: Cargo.toml
crates/synchrosonic-transport/src/: fanout.rs  lib.rs  protocol.rs  receiver.rs  sender.rs
debian/: changelog  control
docs/: apt-repository.md  architecture.md  audio_capture.md  bluetooth-support.md  browser-join-web-receiver.md  configuration.md  discovery.md  linux-packaging-gap-summary.md  linux-packaging.md  local-playback-mirror.md  multi-device-streaming.md  quick-start.md  receiver-mode.md  release-checklist.md  roadmap.md  synchronization.md  synchrosonic_agent_prompt.md  transport-protocol.md
docs/adr/: 0001-linux-first-rust-gtk-pipewire.md  0002-pipewire-tool-backend-before-direct-ffi.md  0003-mdns-sd-lan-discovery.md
docs/developer/: README.md  build-and-release.md  contributing-workflow.md  diagnostics-and-crash-reports.md  environment-setup.md  linting-and-checks.md  project-structure.md  running-locally.md  runtime-refresh-optimization.md  testing.md  troubleshooting.md
docs/synchrosonic_codex_prompts/: 00_MASTER_OPERATING_INSTRUCTION.md  01_SCAFFOLD_PROJECT_ARCHITECTURE.md  02_BUILD_LINUX_SYSTEM_AUDIO_CAPTURE.md  03_ADD_DEVICE_DISCOVERY_OVER_LAN.md  04_IMPLEMENT_RECEIVER_MODE_AND_PLAYBACK.md  05_IMPLEMENT_SENDER_TO_RECEIVER_STREAMING.md  06_ADD_SIMULTANEOUS_LOCAL_PLAYBACK.md  07_ADD_MULTI_DEVICE_CASTING.md  08_ADD_SYNC_AND_LATENCY_MANAGEMENT.md  09_ADD_BLUETOOTH_OUTPUT_SUPPORT.md  10_BUILD_MODERN_GUI.md  11_SETTINGS_PERSISTENCE_LOGS_AND_RECOVERY.md  12_PACKAGE_FOR_LINUX_AND_PREPARE_RELEASE.md  99_REVIEW_AFTER_EACH_PHASE.md  README.md  SynchroSonic_AI_Build_Brief_v2.md  synchrosonic_agent_prompt.md
packaging/arch/: PKGBUILD
packaging/flatpak/: Dockerfile.builder  org.synchrosonic.SynchroSonic.yml
packaging/linux/: AppRun  org.synchrosonic.SynchroSonic.desktop  org.synchrosonic.SynchroSonic.metainfo.xml
packaging/rpm/: synchrosonic.spec.in
scripts/: build-appimage.sh  build-apt-repo.sh  build-arch-package.sh  build-deb.sh  build-flatpak-runner.sh  build-flatpak.sh  build-release-artifacts.sh  build-rpm.sh  package-linux.sh  read-workspace-version.py  verify-release-artifacts.sh
snap/: snapcraft.yaml
