[workspace]
members = [
    "crates/synchrosonic-app",
    "crates/synchrosonic-audio",
    "crates/synchrosonic-core",
    "crates/synchrosonic-discovery",
    "crates/synchrosonic-receiver",
    "crates/synchrosonic-transport",
]
resolver = "2"

[workspace.package]
version = "0.1.0-rc.2"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/synchrosonic/synchrosonic"
homepage = "https://github.com/synchrosonic/synchrosonic"
description = "Linux-first LAN audio casting and receiver control application"
authors = ["SynchroSonic Contributors"]

[workspace.dependencies]
adw = { package = "libadwaita", version = "0.7" }
flate2 = "1"
flume = "0.11"
gtk = { package = "gtk4", version = "0.9" }
mdns-sd = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
strip = "debuginfo"
