[package]
name = "synchrosonic-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
adw.workspace = true
gtk.workspace = true
serde.workspace = true
serde_json.workspace = true
synchrosonic-audio = { path = "../synchrosonic-audio" }
synchrosonic-core = { path = "../synchrosonic-core" }
synchrosonic-discovery = { path = "../synchrosonic-discovery" }
synchrosonic-receiver = { path = "../synchrosonic-receiver" }
synchrosonic-transport = { path = "../synchrosonic-transport" }
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
