[package]
name = "synchrosonic-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
flume.workspace = true
mdns-sd.workspace = true
synchrosonic-core = { path = "../synchrosonic-core" }
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
