[package]
name = "synchrosonic-receiver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
flume.workspace = true
synchrosonic-core = { path = "../synchrosonic-core" }
tracing.workspace = true
