[package]
name = "synchrosonic-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
flume.workspace = true
serde.workspace = true
serde_json.workspace = true
synchrosonic-core = { path = "../synchrosonic-core" }
tracing.workspace = true

[dev-dependencies]
synchrosonic-receiver = { path = "../synchrosonic-receiver" }
